--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,10 @@ tradingview-ta==3.3.0
 typing_extensions==4.11.0
 urllib3==2.2.1
 yarl==1.9.4
+
+ccxt==4.3.36
+pandas==2.2.2
+matplotlib==3.9.0
+mplfinance==0.12.10b0
+selenium==4.21.0
+webdriver-manager==4.0.1
