--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
 multidict==6.0.5
+greenlet==3.0.3
 python-telegram-bot==21.1.1
 requests==2.31.0
 sniffio==1.3.1
@@ -28,3 +29,6 @@ matplotlib==3.9.0
 mplfinance==0.12.10b0
 selenium==4.21.0
 webdriver-manager==4.0.1
+
+asyncpg==0.29.0
+SQLAlchemy==2.0.31
